kafka-inside.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-channel-controller
  namespace: knative-eventing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-channel-controller
  template:
    metadata:
      labels:
        app: kafka-channel-controller
    spec:
      containers:
      - env:
        - name: SYSTEM_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: gcr.io/knative-releases/github.com/knative/eventing/contrib/kafka/cmd/controller@sha256:37c6f0bd2d039fac1e5983039cbdff83f9c3a43c8b243e5611bdb4a18eb206c6
        name: kafka-channel-controller-controller
        volumeMounts:
        - mountPath: /etc/config-provisioner
          name: kafka-channel-controller-config
      serviceAccountName: kafka-channel-controller
      volumes:
      - configMap:
          name: kafka-channel-controller-config
        name: kafka-channel-controller-config
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka-channel-dispatcher
  namespace: knative-eventing
spec:
  replicas: 1
  selector:
    matchLabels:
      clusterChannelProvisioner: kafka
      role: dispatcher
  serviceName: kafka-channel-dispatcher-service
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        clusterChannelProvisioner: kafka
        role: dispatcher
    spec:
      containers:
      - env:
        - name: DISPATCHER_CONFIGMAP_NAME
          value: kafka-channel-dispatcher
        - name: DISPATCHER_CONFIGMAP_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: gcr.io/knative-releases/github.com/knative/eventing/contrib/kafka/cmd/dispatcher@sha256:12a8d7a8c1993d522f28a173147d18e7300bd6f3b21b95160b9145d1e9613563
        name: dispatcher
        volumeMounts:
        - mountPath: /etc/config-provisioner
          name: kafka-channel-controller-config
      serviceAccountName: kafka-channel-dispatcher
      volumes:
      - configMap:
          name: kafka-channel-controller-config
        name: kafka-channel-controller-config

---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: gcppubsub-bus-ext
  namespace: knative-eventing
spec:
  hosts:
  - "9.59.193.46"
  ports:
  - number: 9092
    name: https
    protocol: HTTPS
  location: MESH_EXTERNAL
---
